Add CSS transition group

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -428,3 +428,20 @@ table th {
     justify-content: center;
   }
 }
+
+/* Transition group */
+
+.item-enter {
+  opacity: 0;
+}
+.item-enter-active {
+  opacity: 1;
+  transition: opacity 1000ms ease-in;
+}
+.item-exit {
+  opacity: 1;
+}
+.item-exit-active {
+  opacity: 0;
+  transition: opacity 1000ms ease-in;
+}
